# mbez-reader

./: .gitattributes  .gitignore  README.md  mbez_reader.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: test.yml
mbez/: 20241022_135915.oculus.mbez
tests/: __init__.py  test_mbez_reader.py
